<resources>
    <string name="app_name">PMSUProjekat</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="dobrodosli">Dobrodosli</string>
    <string-array name="Spinner_items">
        <item>Kupac</item>
        <item>Prodavac</item>
    </string-array>
    <string name="login">Login</string>
    <string name="registerBuyer">Register as Buyer</string>
    <string name="registerSalesman">Register as Salesman</string>
    <string name="register">Register</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="notifications">Notifications</string>
    <string name="sync_data">Sync data</string>
    <string name="home_long">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="home">Home</string>
    <string name="places">Places</string>
    <string name="action_settings">L</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="title_activity_detail">Detail</string>
    <string name="blokiraj">Blokiraj</string>
    <string name="dodajArtikal">Dodaj artikal</string>
    <string name="arhiviraj">arhiviraj</string>
    <string name="login_status_shared_preference">com.SharedPreferences_login_status</string>
    <string name="login_shared_preference">Login shared preferences</string>
    <string name="logOut">Log out</string>
    <string name="Empty"> </string>
    <string name="Demo">DEMO</string>
    <string name="Location">Location</string>
    <string name="FindUs">Find us easy</string>
    <string name="dodajAkciju">Dodaj akciju</string>
    <string name="recenziraj">Recenziraj</string>
    <string name="Lista">Lista vasih artikala</string>
    <string name="komentari">Komentari</string>
    <string name="sviKorisnici">Korisnici</string>
    <string name="akcije">Akcije</string>
    <string name="listaObavljenihKupovina">Pristigle i neocenjene narudzbe</string>
    <string name="ostavljanjeKomentara">Ostavite komentar</string>
    <string name="artikliIzabranog">Artikli izabranog prodavca</string>
    <string name="glavnaStranica">Glavna stranica</string>
    <string name="anonimniKomentari">Anonimni komentari</string>
    <string name="potvrdiPristiglost">Potvrdi pristiglost porudzbine</string>
    <string name="resavanje">Resavanje pristiglih porudzbina</string>



</resources>