<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/username1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:ems="10"
        android:textSize="16dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:hint="username"
        tools:text="username"
        android:drawableLeft="@drawable/ic_action_username"
        />

    <EditText
        android:id="@+id/password1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="password"
        android:textSize="16dp"
        tools:text="password" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password1"
        app:cardElevation="10dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/purple_500">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff" />



        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:textStyle="bold"
        android:text="@string/registerBuyer" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/textView2"
        android:textSize="22dp"
        android:textStyle="bold"
        android:text="@string/registerSalesman" />


</RelativeLayout>